# ebook-wgpu-textures

./: Cargo.toml  README.md
examples/ch01/: cube_texture.rs  shader_frag.wgsl  shader_vert.wgsl  sphere_texture.rs
examples/ch02/: cube_atlas.rs  multiple_frag.wgsl  multiple_textures.rs
examples/ch03/: cube_normal.rs  cube_parallax.rs  normal_frag.wgsl  normal_vert.wgsl  parallax_frag.wgsl  sphere_normal.rs
src/: lib.rs  vertex_data.rs
