[package]
name = "wgpu_textures"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.17.1"
cgmath = "0.18"
env_logger = "0.10"
futures = "0.3"
gfx-hal = "0.9"
image = "0.23"
log = "0.4"
pollster = "0.2"
winit = "0.28" 
anyhow = "1.0"
rand = "0.8"
bytemuck = { version = "1.13", features = ["derive"] }
wgpu_simplified = { git = "https://github.com/jack1232/wgpu_simplified" }

[[example]]
name = "cube_texture"
path = "examples/ch01/cube_texture.rs"

[[example]]
name = "sphere_texture"
path = "examples/ch01/sphere_texture.rs"

[[example]]
name = "cube_atlas"
path = "examples/ch02/cube_atlas.rs"

[[example]]
name = "multiple_textures"
path = "examples/ch02/multiple_textures.rs"

[[example]]
name = "cube_normal"
path = "examples/ch03/cube_normal.rs"

[[example]]
name = "sphere_normal"
path = "examples/ch03/sphere_normal.rs"

[[example]]
name = "cube_parallax"
path = "examples/ch03/cube_parallax.rs"
